--- a/frontend/src/assets/base.css
+++ b/frontend/src/assets/base.css
@@ -95,3 +95,19 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.vertical-seperator {
+  position: relative;
+  grid-column: 2;
+  background-color: white;
+  height: calc(100% + 10px);
+  top: -10px;
+  width: 1px;
+}
+
+.horizontal-seperator {
+  grid-column: 1 / -1;
+  background-color: white;
+  height: 1px;
+  width: 100%;
+}
